--- a/outline/outline.tex
+++ b/outline/outline.tex
@@ -35,7 +35,7 @@ introduce common cloud architecture, consist of compute node and shared storage,
 \end{itemize}
 
 \subsection{master}
-function:
+functionality:
 
 	\begin{itemize}
 		\item manage IOnodes including addtion, deletion.
@@ -45,11 +45,19 @@ function:
 	\end{itemize}
 
 \subsection{IOnode}
-function:
+functionality:
 
 \begin{itemize}
 	\item buffer client output data.
 	\item read data from storage.
+\end{itemize}
+
+\subsection{file operation}
+\begin{itemize}
+  \item open
+  \item read
+  \item write
+  \item close
 \end{itemize}
 
 \section{Evaluation}
