--- a/paper/src/background.tex
+++ b/paper/src/background.tex
@@ -1,3 +1,20 @@
 %to do
+\section{background}
+\label{sec:background}
+\subsection{cloud computing}
 
-section II: background
+\subsection{burst buffer}
+In modern high performance systems storage systems can easily become the bottleneck of the whole system\xtq{citation}, 
+\subsection{workflow application}
+Montage is a toolkit developed by Spitzer Science Center for assembling Flexible Image Transport System (FITS) images into custom mosaics.
+It has been built, tested and the output products validated by Montage customers on Unix platforms, including Linux, Solaris, Mac OSX, and IBM AIX.
+It has been used to generate mosaics from data released by the Spitzer Space Telescope, the Hubble Space Telescope, the Infrared Astronomical Satellite (IRAS),
+the Midcourse Space Experiment (MSX), the Sloan Digital Sky Survey (SDSS), and ground-based telescopes such as the National Optical Astronomy Observatories (NOAO) 4-m telescope and the William Herschel 4-m telescope.
+
+The Persistence of Vision Raytracer, or POV-Ray, is a ray tracing program which generates images from a text-based scene description,
+and is available for a variety of computer platforms. It was originally based on DKBTrace, written by David Kirk Buck and Aaron A.
+Collins for the Amiga computers.
+There are also influences from the earlier Polyray raytracer contributed by its author Alexander Enzmann.
+POV-Ray is free and open-source software with the source code available under the AGPLv3.
+Many methods for generating the 3-D models are used, including a companion program "moray" for interactive modeling.
+
