--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -1,6 +1,7 @@
 \documentclass[10pt, conference, compsocconf]{IEEEtran}
 \usepackage{color}
 \usepackage{supertabular}
+\usepackage{graphicx}
 
 \begin{document}
 
@@ -12,20 +13,20 @@
 \author{\IEEEauthorblockN{Tianqi Xu}
 	\IEEEauthorblockA{Dept. of Mathematical and Computing Sciences\\
 		Tokyo Institute of Technology\\
-		Tokyo, Japan\\
+		2-12-1-W8-33, Ohokayama, Meguro-ku, Tokyo 152-8552 Japan\\
 	belldandyxtq@gmail.com}
 	\and
 	\IEEEauthorblockN{Kento Sato}
 	\IEEEauthorblockA{?\\
-		?\\
-		?\\
+		Lawrence Livermore National Laboratory\\
+		Livermore, CA 94551 USA\\
 	?}
 	\and
 	\IEEEauthorblockN{Satoshi Matsuoka}
-	\IEEEauthorblockA{Dept. of Mathematical and Computing Sciences\\
+	\IEEEauthorblockA{Global Scientific Information and Computing Center\\
 		Tokyo Institute of Technology\\
-		Tokyo, Japan\\
-	?}
+		2-12-1-W8-33, Ohokayama, Meguro-ku, Tokyo 152-8552 Japan\\
+	matsu@is.titech.ac.jp}
 }
 
 \maketitle
