--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -19,7 +19,7 @@ to shared between different nodes in different work flow.
 Such applications are now running majorly on high performance computing system like supercomputers, with a GB/s level shared storage as well as high interconnection network.
 Furthermore, large scale applications require for a large amount of compute node as well as a
 running time from several hours to several days, machine failure is Inevitable and checkpoint will be required to enable
-fast recovery from machine failure\cite{user}, in order to make a timely checkpoint, a fast global
+fast recovery from machine failure\cite{checkpointing}, in order to make a timely checkpoint, a fast global
 shared storage is indispensable.
 
 However, In current cloud environment, the global shared storage can not meet the demand.
