--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -2,6 +2,7 @@
 \usepackage{color}
 \usepackage{supertabular}
 \usepackage{graphicx}
+\bibliographystyle{IEEEtran}
 
 \begin{document}
 
@@ -65,6 +66,6 @@
 %section VII
 \input{src/conclusion.tex}
 
-\bibliography{src/bib/reference.bib}
+\bibliography{src/ref/reference.bib}
 
 \end{document}
