--- a/paper/src/introduction.tex
+++ b/paper/src/introduction.tex
@@ -49,7 +49,7 @@ Our contributions can be summarized as following:
 \end{itemize}
 %2
 The rest of this paper is organized as follows. 
-In Section \ref{sec:motivation}, we clarify the motivation and the background.
+In Section \ref{sec:background}, we clarify the motivation and the background.
 We introduce an overview of the I/O bursting buffer architecture in Section \ref{sec:architecture}, 
 and describe the detail about the first prototype implementation of our proposal architecture in order to evaluate its performance in a real environment \ref{sec:implementation}. 
 In Section \ref{sec:evaluation}, we present our experimental results based of our performance models. %based on data obtained from several benchmark on TSUBAME V queue and Amazon EC2 
